--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .project
 .settings/
 /bin/chromedriver.exe
+/bin/msedgedriver.exe
 /bin/sqljdbc4-4.0.jar
 /src/main/resources/jdbc.properties
 /src/test/resources/jdbc.properties
